# sobralinvest

./: .env  .env.example  .gitignore  Pasta1.xlsx  juntar_codigo.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: etl_diario.yml
database/schema/: 001_modelo_logico_v1.md
docs/architecture/: decisions.md
etl/: etl_fdt.py  run_etl.py
etl/config/: settings.py
etl/database/: connection.py  supabase_client.py
etl/scripts/: add_cdcvm.py  add_cnpj.py  calcular_indicadores.py  carga_historica.py  completar_cnpj_por_cd_cvm.py  etl_cotacoes.py  etl_cvm.py  etl_dividendos.py  etl_empresas.py  etl_fundamentos_cvm.py  etl_indicadores.py  etl_listagem.py  etl_metricas_setor.py  etl_score.py  importar_cnpj_b3.py  popular_cd_cvm.py  popular_ticker_empresa.py  test_connection.py  test_dividendos.py  test_duplicates.py  test_etl_cargas.py  test_historicos.py  test_supabase.py
frontend/: site.py
