[project]
name = "sobralinvest"
version = "0.1.0"
description = "Plataforma de análise fundamentalista para ações da B3"
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "polars",
    "pyarrow",

    "sqlalchemy",
    "psycopg[binary]",
    "alembic",

    "supabase",

    "fastapi",
    "uvicorn",

    "pydantic",
    "pydantic-settings",

    "python-dotenv",

    "loguru",

    "httpx",
    "tenacity",

    "pytest",
    "ruff",
    "mypy"
]
